#7238 closed bug (fixed)
A Processcontroller About box font fix
Reported by: | Karvjorm | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/ProcessController | Version: | R1/alpha2 |
Keywords: | Processcontroller localization | Cc: | Karvjorm |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Here is a title font fix for Processcontroller About box.
Attachments (3)
Change History (10)
comment:1 by , 14 years ago
patch: | 0 → 1 |
---|
comment:2 by , 14 years ago
Component: | - General → Applications/ProcessController |
---|
follow-up: 4 comment:3 by , 14 years ago
by , 14 years ago
Attachment: | processcontroller-localization-update.patch added |
---|
An updated ProcessController localization fix
comment:4 by , 14 years ago
Replying to siarzhuk:
Some remarks:
1) Variable names must be descriptive - this is the requirement of our coding guidelines. I found "str1" is not a descriptive one. May be "appName", "title", "name" make your code a bit better?
2) There is [theoretical] possibility to break the font style selection by translating first line differently than the beginning of the second line. So I preferred for my syslog_daemon changes using additional snprintf parameter during composing the Alert text. But, this one is not the case, I think - adding additional formatting call will make the code a bit complicate so actual version looks OK in this place. This is just for your information. ;-)
I coded that patch a bit stupid. That str1 should have not used at all, as you can see about this updated patch.
br, Karvjorm
follow-up: 7 comment:6 by , 14 years ago
by , 14 years ago
Attachment: | processcontroller_r40558.png added |
---|
Some remarks:
1) Variable names must be descriptive - this is the requirement of our coding guidelines. I found "str1" is not a descriptive one. May be "appName", "title", "name" make your code a bit better?
2) There is [theoretical] possibility to break the font style selection by translating first line differently than the beginning of the second line. So I preferred for my syslog_daemon changes using additional snprintf parameter during composing the Alert text. But, this one is not the case, I think - adding additional formatting call will make the code a bit complicate so actual version looks OK in this place. This is just for your information. ;-)