Yet another localization patch made by Jorma Karvonen. Fixes #7238

Notes on patch:
1) Localization of internal Deskbar item name and kClassName rejected;

Additional fixes by S.Zharski:
1) BLocker's internal name localization removed;
2) A bit more safe snprintf used instead of sprintf;
3) Localization of field names in 'PrTh' message removed;
4) Localization of calling "db" debugger removed. The thread debugging command
"db %d" replaced with "gdb -pid=%d".



git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@40558 a95241bf-73f2-0310-859d-f6bbb57e9c96